[package]
name = "sea_orm_demo"
version = "0.1.0"
edition = "2021"

[workspace]
menbers = [".", "model", "migration"]

[dependencies]
sea-orm = { version = "1.1.0", features = [
    "sqlx-sqlite",
    "runtime-tokio",
    "macros",
] }
tokio = { version = "1", features = ["full"] }
model = { path = "model" }
migration = { path = "migration" }
